updated git ignores

--- a/Modeling/MLP Model Results.ipynb
+++ b/Modeling/MLP Model Results.ipynb
@@ -39,7 +39,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train_model1 = np.load('training_feature_arr_MLP_Model1.npy')\n",
+    "X_train = np.load('training_feature_arr_MLP_Model1.npy')\n",
     "X_test_model2 = np.load('testing_feature_arr_MLP_Model1.npy')\n",
     "y_train = np.load('training_labels_MLP.npy')\n",
     "y_test = np.load('testing_labels_MLP.npy')\n",
